<resources>
    <string name="app_name">First android application</string>
    <string name="hello_first">Hello,</string>
    <string name="choice_first">Make your choice: </string>
    <!--Button Strings-->
    <string name="integerBTN_first">Integer</string>
    <string name="doubleBTN_first">double</string>
    <string name="stringBTN_first">String</string>

    <!--TextView texts-->
    <!--Titles-->
    <string name="integer_type_first">Integer</string>
    <string name="double_type_first">Double</string>
    <string name="string_type_first">String</string>
    <!--Text-->
    <string name="integer_info_first">The java.lang.Integer class wraps a value of the primitive type int in an object. An object of type Integer contains a single field whose type is int.</string>
    <string name="double_info_first">The java.lang.Double class wraps a value of the primitive type double in an object. An object of type Double contains a single field whose type is double.</string>
    <string name="string_info_first">The java.lang.String class represents character strings. All string literals in Java programs, such as abc, are implemented as instances of this class.Strings are constant, their values cannot be changed after they are created</string>

    <string name="enter_number">Enter number</string>
    <string name="enter">enter</string>
    <string name="sqrt_type_string">SQRT of number</string>
    <string name="enter_number_btn">Enter number</string>
    <string name="cube_of_number">Cube of number</string>
    <string name="next_exc">Next exc = )</string>
    <string name="first_lab_btn">First lab</string>
    <string name="second_lab_btn">Second lab</string>
    <string name="what_s_your_name">What`s Your Name?</string>

    <string name="second_lab_hello">Hello, it`s second lab. Make your choice: </string>
    <string name="redTXTView">red</string>
    <string name="greenTXTView">green</string>
    <string name="blueTXTView">blue</string>
    <string name="cyan_color">cyan</string>
    <string name="magneta_color">magneta</string>
    <string name="black_color">black</string>
    <string name="yellow_color">yellow</string>
    <string name="check_first_txt">Enter number to check if first:</string>
    <string name="third_lab">third lab</string>
    <string name="films">Films</string>
    <string name="series">Series</string>
    <string name="get_random_numbs">Get random numbs</string>

</resources>
