<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first.lab.SecondActivity">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:text="@string/hello_first"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice_first"
            android:textAlignment="center" />

        <Button
            android:id="@+id/intBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/integerBTN_first"
            android:onClick="integerType"/>

        <Button
            android:id="@+id/doubleBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doubleBTN_first"
            android:onClick="doubleType"/>

        <Button
            android:id="@+id/StringBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringBTN_first"
            android:onClick="stringType"/>

        <Button
            android:id="@+id/enterNumberBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_number_btn"
            android:onClick="goIntoEnterNumber"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>