<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondlab.colors.Colors"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="378dp"
        android:layout_height="509dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/redTextView"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="#C0392B"
            android:gravity="center"
            android:text="@string/redTXTView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/greenTextView"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="#27AE60"
            android:gravity="center"
            android:text="@string/greenTXTView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blueTextView"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="#2E86C1"
            android:gravity="center"
            android:text="@string/blueTXTView"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>